feedback.xls points 19 , 21 , 22 , and from 24 to 36 except :26 , 31,35 ,36

--- a/SECB/app/src/main/res/layout-ar/email_input.xml
+++ b/SECB/app/src/main/res/layout-ar/email_input.xml
@@ -1,7 +1,7 @@
 <!-- email-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/imgv_userNameIcon"
@@ -11,7 +11,7 @@
         android:layout_centerVertical="true"
         android:layout_gravity="center_vertical"
         android:src="@drawable/user_icon"
-        android:visibility="visible" />
+        android:visibility="visible"/>
 
     <EditText
         android:id="@+id/edt_email"
@@ -20,12 +20,14 @@
         android:layout_centerVertical="true"
         android:layout_marginRight="@dimen/login_input_text_margin_left"
         android:layout_toLeftOf="@+id/imgv_userNameIcon"
+        android:background="@color/white"
+        android:cursorVisible="true"
+        android:gravity="right"
         android:hint="@string/username"
         android:padding="@dimen/login_input_text_pad"
         android:singleLine="true"
         android:text=""
-        android:background="@color/white"
         android:textColor="@color/secb_dark_text"
-        android:gravity="right"
-        android:textSize="@dimen/login_input_text_size" />
+        android:textCursorDrawable="@null"
+        android:textSize="@dimen/login_input_text_size"/>
 </RelativeLayout>
