--- a/SECB/app/src/main/res/layout-ar/events_filter_screen.xml
+++ b/SECB/app/src/main/res/layout-ar/events_filter_screen.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_alignParentBottom="true"
-    android:background="#aa000000"
+
     android:orientation="horizontal"
     android:weightSum="3">
 
@@ -13,6 +13,8 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:clickable="true"
+        android:background="#aa000000"
+        android:visibility="invisible"
         android:orientation="vertical"></LinearLayout>
 
     <View
@@ -20,7 +22,9 @@
         android:layout_width="2.3dp"
         android:layout_height="match_parent"
         android:layout_above="@+id/filter_container"
-        android:background="@drawable/shadow_v"></View>
+        android:visibility="visible"
+        android:background="#aa000000"
+        ></View>
 
     <LinearLayout
         android:id="@+id/filter_container"
