--- a/SECB/app/src/main/res/layout/events_filter_screen.xml
+++ b/SECB/app/src/main/res/layout/events_filter_screen.xml
@@ -3,7 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#aa000000"
     android:orientation="horizontal"
     android:weightSum="3"
     android:layout_alignParentBottom="true">
@@ -14,6 +13,8 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:clickable="true"
+        android:background="#aa000000"
+        android:visibility="invisible"
         android:orientation="vertical"></LinearLayout>
 
     <View
@@ -21,7 +22,8 @@
         android:layout_width="2.3dp"
         android:layout_height="match_parent"
         android:layout_above="@+id/filter_container"
-        android:background="@drawable/shadow_v"></View>
+        android:visibility="visible"
+        android:background="#aa000000"></View>
 
     <LinearLayout
         android:id="@+id/filter_container"
