--- a/SECB/app/src/main/res/layout-ar/contact_us.xml
+++ b/SECB/app/src/main/res/layout-ar/contact_us.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    android:orientation="vertical"
-    android:padding="@dimen/contact_us_base_margin">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:orientation="vertical"
+            android:padding="@dimen/contact_us_base_margin">
 
 
     <LinearLayout
@@ -20,101 +20,99 @@
             android:id="@+id/txtv_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableRight="@drawable/event_card_place_icon"
-            android:textSize="@dimen/contact_us_text_us"
             android:drawablePadding="@dimen/contact_us_text_drwable_padding"
-            android:textColor="@color/secb_dark_text"
+            android:drawableRight="@drawable/event_card_place_icon"
+            android:gravity="right"
             android:text="@string/secb_location_address"
-            android:gravity="right"/>
+            android:textColor="@color/secb_dark_text"
+            android:textSize="@dimen/contact_us_text_us"/>
 
         <TextView
             android:id="@+id/txtv_email"
-            android:gravity="right"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableRight="@drawable/email_icon"
-            android:textSize="@dimen/contact_us_text_us"
             android:layout_marginTop="@dimen/contact_us_text_drwable_padding"
             android:drawablePadding="@dimen/contact_us_text_drwable_padding"
+            android:drawableRight="@drawable/email_icon"
+            android:gravity="right"
+            android:text="@string/secb_email_address"
             android:textColor="@color/secb_dark_text"
-            android:text="@string/secb_email_address"/>
+            android:textSize="@dimen/contact_us_text_us"/>
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/contact_us_text_drwable_padding"
             android:layout_marginBottom="@dimen/contact_us_text_drwable_padding"
+            android:layout_marginTop="@dimen/contact_us_text_drwable_padding"
             android:gravity="center_vertical">
 
             <TextView
                 android:id="@+id/txtv_fax"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableRight="@drawable/fax_icon"
-                android:textSize="@dimen/contact_us_text_us"
-                android:gravity="right"
                 android:layout_weight="1"
                 android:drawablePadding="@dimen/contact_us_text_drwable_padding"
+                android:drawableRight="@drawable/fax_icon"
+                android:gravity="right"
+                android:text="@string/secb_fax_number"
                 android:textColor="@color/secb_dark_text"
-                android:text="@string/secb_fax_number"/>
+                android:textSize="@dimen/contact_us_text_us"/>
 
             <TextView
                 android:id="@+id/txtv_phone"
                 android:layout_width="match_parent"
-                android:gravity="right"
                 android:layout_height="wrap_content"
-                android:drawableRight="@drawable/contactus_icon_3_ar"
-                android:textSize="@dimen/contact_us_text_us"
+                android:layout_weight="1"
                 android:drawablePadding="@dimen/contact_us_text_drwable_padding"
-                android:textColor="@color/secb_dark_text"
+                android:drawableRight="@drawable/contactus_icon_3_ar"
+                android:gravity="right"
                 android:text="@string/secb_phone_number"
-                android:layout_weight="1"/>
-
+                android:textColor="@color/secb_dark_text"
+                android:textSize="@dimen/contact_us_text_us"/>
 
 
         </TableRow>
 
         <TableRow
-            android:weightSum="8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/contact_us_text_drwable_padding"
             android:gravity="right"
+            android:weightSum="8"
             >
-
-
-
 
 
             <ImageView
                 android:id="@+id/imgv_linkedin"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/in_icon"
+                android:layout_weight="1"
 
-                android:layout_weight="1"/>
+                android:src="@drawable/in_icon"/>
+
             <ImageView
                 android:id="@+id/imgv_google"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/gp"
+                android:layout_weight="1"
 
-                android:layout_weight="1"/>
+                android:src="@drawable/gp"/>
 
             <ImageView
                 android:id="@+id/imgv_twitter"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/tw"
+                android:layout_weight="1"
 
-                android:layout_weight="1"/>
+                android:src="@drawable/tw"/>
+
             <ImageView
                 android:id="@+id/imgv_facebook"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/fb_icon"
+                android:layout_weight="1"
 
-                android:layout_weight="1"/>
+                android:src="@drawable/fb_icon"/>
 
         </TableRow>
         <!--map-->
@@ -122,8 +120,8 @@
             android:id="@+id/map_container"
             android:layout_width="match_parent"
             android:layout_height="@dimen/event_details_map_height"
-            android:orientation="vertical"
-            android:layout_margin="@dimen/contact_us_base_margin" >
+            android:layout_margin="@dimen/contact_us_base_margin"
+            android:orientation="vertical">
 
             <FrameLayout
                 android:id="@+id/mapFrame"
@@ -136,7 +134,6 @@
         </LinearLayout>
 
 
-
         <TextView
             android:id="@+id/txtv_formTitle"
             android:layout_width="match_parent"
@@ -145,120 +142,132 @@
             android:layout_marginBottom="@dimen/event_details_iconed_info_margin"
             android:layout_marginLeft="@dimen/event_details_iconed_info_margin"
             android:layout_marginRight="@dimen/event_details_iconed_info_margin"
-            android:text="@string/contact_us_form_title"
-            android:textColor="@color/secb_dark_text"
             android:gravity="right"
             android:padding="@dimen/contact_us_base_margin"
+            android:text="@string/contact_us_form_title"
+            android:textColor="@color/secb_dark_text"
             android:textSize="@dimen/contact_us_text_us"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@color/white"
             android:layout_marginBottom="@dimen/contact_us_padding"
             android:layout_marginLeft="@dimen/contact_us_padding"
             android:layout_marginRight="@dimen/contact_us_padding"
+            android:background="@color/white"
+            android:orientation="vertical"
             android:padding="@dimen/contact_us_padding">
 
             <EditText
                 android:id="@+id/edtxt_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableRight="@drawable/user_shape_icon"
-                android:textSize="@dimen/contact_us_text_us"
-                android:hint="@string/hint_name"
-                android:background="@null"
-                android:drawablePadding="@dimen/contact_us_text_drwable_padding"
-                android:textColor="@color/secb_dark_text"
                 android:layout_weight="1"
+                android:background="@null"
+                android:cursorVisible="true"
+                android:drawablePadding="@dimen/contact_us_text_drwable_padding"
+                android:drawableRight="@drawable/user_shape_icon"
                 android:gravity="right"
+                android:hint="@string/hint_name"
+                android:textColor="@color/secb_dark_text"
+                android:textCursorDrawable="@null"
+                android:textSize="@dimen/contact_us_text_us"
                 />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
-                android:background="#000"
-                android:layout_margin="@dimen/contact_us_text_drwable_padding"/>
+                android:layout_margin="@dimen/contact_us_text_drwable_padding"
+                android:background="#000"/>
+
             <EditText
                 android:id="@+id/edtxt_mobile"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@null"
+                android:drawablePadding="@dimen/contact_us_text_drwable_padding"
                 android:drawableRight="@drawable/mobile_icon"
-                android:textSize="@dimen/contact_us_text_us"
+                android:gravity="right"
                 android:hint="@string/hint_mobile"
                 android:textColor="@color/secb_dark_text"
-                android:background="@null"
-                android:gravity="right"
-                android:drawablePadding="@dimen/contact_us_text_drwable_padding"
-                android:layout_weight="1"/>
+                android:textSize="@dimen/contact_us_text_us"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
-                android:background="#000"
-                android:layout_margin="@dimen/contact_us_text_drwable_padding"/>
+                android:layout_margin="@dimen/contact_us_text_drwable_padding"
+                android:background="#000"/>
+
             <EditText
                 android:id="@+id/edtxt_organization"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableRight="@drawable/organization_icon"
-                android:textSize="@dimen/contact_us_text_us"
+                android:layout_weight="1"
                 android:background="@null"
+                android:drawablePadding="@dimen/contact_us_text_drwable_padding"
+                android:drawableRight="@drawable/organization_icon"
                 android:gravity="right"
                 android:hint="@string/hint_organization"
                 android:textColor="@color/secb_dark_text"
-                android:drawablePadding="@dimen/contact_us_text_drwable_padding"
-                android:layout_weight="1"/>
+                android:textSize="@dimen/contact_us_text_us"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
-                android:background="#000"
-                android:layout_margin="@dimen/contact_us_text_drwable_padding"/>
+                android:layout_margin="@dimen/contact_us_text_drwable_padding"
+                android:background="#000"/>
+
             <EditText
                 android:id="@+id/edtxt_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableRight="@drawable/email_icon"
-                android:textSize="@dimen/contact_us_text_us"
-                android:hint="@string/email_address"
+                android:layout_weight="1"
                 android:background="@null"
-                android:gravity="right"
-                android:textColor="@color/secb_dark_text"
                 android:drawablePadding="@dimen/contact_us_text_drwable_padding"
-                android:layout_weight="1"/>
+                android:drawableRight="@drawable/email_icon"
+                android:gravity="right"
+                android:hint="@string/email_address"
+                android:textColor="@color/secb_dark_text"
+                android:textSize="@dimen/contact_us_text_us"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
-                android:background="#000"
-                android:layout_margin="@dimen/contact_us_text_drwable_padding"/>
+                android:layout_margin="@dimen/contact_us_text_drwable_padding"
+                android:background="#000"/>
+
             <EditText
                 android:id="@+id/edtxt_job"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableRight="@drawable/job_icon"
-                android:textSize="@dimen/contact_us_text_us"
+                android:layout_weight="1"
                 android:background="@null"
+                android:drawablePadding="@dimen/contact_us_text_drwable_padding"
+                android:drawableRight="@drawable/job_icon"
                 android:gravity="right"
                 android:hint="@string/hint_job_title"
                 android:textColor="@color/secb_dark_text"
-                android:drawablePadding="@dimen/contact_us_text_drwable_padding"
-                android:layout_weight="1"/>
+                android:textSize="@dimen/contact_us_text_us"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
-                android:background="#000"
-                android:layout_margin="@dimen/contact_us_text_drwable_padding"/>
+                android:layout_margin="@dimen/contact_us_text_drwable_padding"
+                android:background="#000"/>
+
             <EditText
                 android:id="@+id/edtxt_subject"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableRight="@drawable/subject_icon"
-                android:textSize="@dimen/contact_us_text_us"
+                android:layout_weight="1"
                 android:background="@null"
+                android:drawablePadding="@dimen/contact_us_text_drwable_padding"
+                android:drawableRight="@drawable/subject_icon"
                 android:gravity="right"
                 android:hint="@string/hint_subject"
                 android:textColor="@color/secb_dark_text"
-                android:drawablePadding="@dimen/contact_us_text_drwable_padding"
-                android:layout_weight="1"/>
+                android:textSize="@dimen/contact_us_text_us"/>
 
 
         </LinearLayout>
@@ -267,12 +276,12 @@
             android:id="@+id/btn_send"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/contact_us_btn_text_us"
+            android:layout_margin="@dimen/contact_us_padding"
+            android:layout_weight="1"
+            android:background="@color/secb_orange"
             android:text="@string/send"
             android:textColor="@color/secb_dark_text"
-            android:background="@color/secb_orange"
-            android:layout_margin="@dimen/contact_us_padding"
-            android:layout_weight="1"/>
+            android:textSize="@dimen/contact_us_btn_text_us"/>
 
     </LinearLayout>
 </ScrollView>
