--- a/SECB/app/src/main/res/layout-ar/e_services_filter_screen.xml
+++ b/SECB/app/src/main/res/layout-ar/e_services_filter_screen.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#aa000000"
+        android:background="@color/transparent"
         android:orientation="horizontal"
         android:weightSum="3">
 
@@ -18,7 +18,9 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="#aa000000"
             android:clickable="true"
+            android:visibility="invisible"
             android:orientation="vertical"></LinearLayout>
 
         <View
@@ -26,8 +28,11 @@
             android:layout_width="2.3dp"
             android:layout_height="match_parent"
             android:layout_above="@+id/filter_container"
-            android:background="@drawable/shadow_v"
-            android:clickable="true"></View>
+            android:visibility="visible"
+            android:background="#aa000000"
+            android:clickable="true">
+
+        </View>
 
         <LinearLayout
             android:id="@+id/filter_container"
