--- a/SECB/app/src/main/res/layout-ar/event_details_iconed_info.xml
+++ b/SECB/app/src/main/res/layout-ar/event_details_iconed_info.xml
@@ -13,7 +13,7 @@
 
         <TextView
             android:id="@+id/txtv_event_timeValue"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
@@ -28,7 +28,7 @@
 
         <TextView
             android:id="@+id/txtv_event_placeValue"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
@@ -43,7 +43,7 @@
 
         <TextView
             android:id="@+id/txtv_event_categoryValue"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
