--- a/SECB/app/src/main/res/layout-ar/event_item_card.xml
+++ b/SECB/app/src/main/res/layout-ar/event_item_card.xml
@@ -124,10 +124,10 @@
 
             <TextView
                 android:id="@+id/txtv_event_timeValue"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_weight="1"
+
                 android:drawableRight="@drawable/event_card_time_icon"
                 android:drawablePadding="3dp"
                 android:ellipsize="end"
@@ -137,13 +137,15 @@
                 android:textSize="@dimen/event_card_h3_text_size"/>
 
 
+            <!--android:layout_marginLeft="@dimen/event_card_margin"-->
             <TextView
                 android:id="@+id/txtv_event_placeValue"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginLeft="@dimen/event_card_margin"
-                android:layout_weight="1"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+
                 android:drawablePadding="3dp"
                 android:drawableRight="@drawable/event_card_place_icon"
                 android:ellipsize="end"
@@ -156,7 +158,7 @@
 
             <TextView
                 android:id="@+id/txtv_event_categoryValue"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="@dimen/event_card_margin"
