--- a/SECB/app/src/main/res/layout-ar/locations_filter_screen.xml
+++ b/SECB/app/src/main/res/layout-ar/locations_filter_screen.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="#aa000000"
+              android:background="@color/transparent"
               android:orientation="horizontal"
               android:weightSum="3">
 
@@ -12,6 +12,8 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:clickable="true"
+        android:background="#aa000000"
+        android:visibility="invisible"
         android:orientation="vertical"></LinearLayout>
 
     <View
@@ -19,7 +21,8 @@
         android:layout_width="2.3dp"
         android:layout_height="match_parent"
         android:layout_above="@+id/filter_container"
-        android:background="@drawable/shadow_v"
+        android:visibility="visible"
+        android:background="#aa000000"
         android:clickable="true"></View>
 
     <LinearLayout
