--- a/SECB/app/src/main/res/layout-ar/organizers_filter_screen.xml
+++ b/SECB/app/src/main/res/layout-ar/organizers_filter_screen.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="horizontal"
     android:weightSum="3"
-    android:background="#aa000000">
+    android:background="@color/transparent">
 
     <LinearLayout
         android:id="@+id/layout_dark_layer"
@@ -14,6 +14,8 @@
         android:layout_weight="1"
         android:layout_height="match_parent"
         android:clickable="true"
+        android:background="#aa000000"
+        android:visibility="invisible"
         android:orientation="vertical">
     </LinearLayout>
     <View
@@ -22,7 +24,8 @@
         android:clickable="true"
         android:layout_height="match_parent"
         android:layout_above="@+id/filter_container"
-        android:background="@drawable/shadow_v">
+        android:visibility="visible"
+        android:background="#aa000000">
     </View>
     <LinearLayout
         android:id="@+id/filter_container"
