--- a/SECB/app/src/main/res/layout/contact_us.xml
+++ b/SECB/app/src/main/res/layout/contact_us.xml
@@ -152,6 +152,7 @@
             android:layout_marginRight="@dimen/contact_us_padding"
             android:padding="@dimen/contact_us_padding">
 
+            <!---->
             <EditText
                 android:id="@+id/edtxt_name"
                 android:layout_width="match_parent"
@@ -159,6 +160,8 @@
                 android:drawableLeft="@drawable/user_shape_icon"
                 android:textSize="@dimen/contact_us_text_us"
                 android:hint="@string/hint_name"
+                android:cursorVisible="true"
+                android:textCursorDrawable="@null"
                 android:background="@null"
                 android:drawablePadding="@dimen/contact_us_text_drwable_padding"
                 android:textColor="@color/secb_dark_text"
@@ -176,8 +179,10 @@
                 android:drawableLeft="@drawable/mobile_icon"
                 android:textSize="@dimen/contact_us_text_us"
                 android:hint="@string/hint_mobile"
-                android:textColor="@color/secb_dark_text"
+                android:cursorVisible="true"
+                android:textCursorDrawable="@null"
                 android:background="@null"
+                android:textColor="@color/secb_dark_text"
                 android:drawablePadding="@dimen/contact_us_text_drwable_padding"
                 android:layout_weight="1"/>
             <LinearLayout
@@ -191,6 +196,8 @@
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/organization_icon"
                 android:textSize="@dimen/contact_us_text_us"
+                android:cursorVisible="true"
+                android:textCursorDrawable="@null"
                 android:background="@null"
                 android:hint="@string/hint_organization"
                 android:textColor="@color/secb_dark_text"
@@ -208,6 +215,8 @@
                 android:drawableLeft="@drawable/email_icon"
                 android:textSize="@dimen/contact_us_text_us"
                 android:hint="@string/email_address"
+                android:cursorVisible="true"
+                android:textCursorDrawable="@null"
                 android:background="@null"
                 android:textColor="@color/secb_dark_text"
                 android:drawablePadding="@dimen/contact_us_text_drwable_padding"
@@ -223,6 +232,8 @@
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/job_icon"
                 android:textSize="@dimen/contact_us_text_us"
+                android:cursorVisible="true"
+                android:textCursorDrawable="@null"
                 android:background="@null"
                 android:hint="@string/hint_job_title"
                 android:textColor="@color/secb_dark_text"
@@ -240,6 +251,8 @@
                 android:drawableLeft="@drawable/subject_icon"
                 android:textSize="@dimen/contact_us_text_us"
                 android:background="@null"
+                android:cursorVisible="true"
+                android:textCursorDrawable="@null"
                 android:hint="@string/hint_subject"
                 android:textColor="@color/secb_dark_text"
                 android:drawablePadding="@dimen/contact_us_text_drwable_padding"
