--- a/SECB/app/src/main/res/layout/e_services_filter_screen.xml
+++ b/SECB/app/src/main/res/layout/e_services_filter_screen.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#aa000000"
+        android:background="@color/transparent"
         android:orientation="horizontal"
         android:weightSum="3">
 
@@ -18,6 +18,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:clickable="true"
+            android:visibility="invisible"
+            android:background="#aa000000"
             android:orientation="vertical"></LinearLayout>
 
         <View
@@ -25,7 +27,8 @@
             android:layout_width="2.3dp"
             android:layout_height="match_parent"
             android:layout_above="@+id/filter_container"
-            android:background="@drawable/shadow_v"
+            android:visibility="visible"
+            android:background="#aa000000"
             android:clickable="true"></View>
 
         <LinearLayout
