--- a/SECB/app/src/main/res/layout/news_filter_screen.xml
+++ b/SECB/app/src/main/res/layout/news_filter_screen.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#aa000000">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/transparent">
 
     <LinearLayout
         android:id="@+id/layout_dark_layer"
@@ -12,6 +12,8 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/shadow"
         android:clickable="true"
+        android:background="#aa000000"
+        android:visibility="invisible"
         android:orientation="vertical">
 
     </LinearLayout>
