--- a/SECB/app/src/main/res/layout/e_services_filter_screen.xml
+++ b/SECB/app/src/main/res/layout/e_services_filter_screen.xml
@@ -123,7 +123,7 @@
             <!--types input-->
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/news_filter_screen_recycler_height"
+                android:layout_height="@dimen/eservice_filter_screen_recycler_height"
                 android:background="@color/white"
                 android:orientation="vertical"
                 android:padding="@dimen/news_filter_padding">
@@ -166,7 +166,7 @@
             <!--types input-->
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/news_filter_screen_recycler_height"
+                android:layout_height="@dimen/eservice_filter_screen_recycler_height"
                 android:background="@color/white"
                 android:orientation="vertical"
                 android:padding="@dimen/news_filter_padding">
@@ -247,17 +247,17 @@
 
             <!--Clear Filters button-->
 
-            <Button
+            <TextView
                 android:id="@+id/btn_clearFilter"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/news_filter_padding"
-                android:background="@color/secb_orange"
+                android:layout_marginTop="20dp"
                 android:text="@string/filters_clear_filter"
                 android:textAllCaps="false"
+                android:background="@null"
+                android:gravity="center"
                 android:textColor="@color/secb_light_text"
                 android:textSize="@dimen/news_filter_btn_text_size"/>
-
 
         </LinearLayout>
 
