--- a/SECB/app/src/main/res/values-hdpi/dimens.xml
+++ b/SECB/app/src/main/res/values-hdpi/dimens.xml
@@ -59,7 +59,7 @@
     <dimen name="news_filter_screen_height">359dp</dimen> <!-- 905PX - HEIGHT -->
     <dimen name="news_filter_screen_recycler_height">107dp</dimen> <!-- 270PX - HEIGHT -->
 
-    <dimen name="news_filter_padding">14dp</dimen> <!-- 30PX - WIDTH -->
+    <dimen name="news_filter_padding">10dp</dimen> <!-- 30PX - WIDTH -->
     <dimen name="news_filter_text_size">10dp</dimen> <!-- 24PX - HEIGHT -->
     <dimen name="news_filter_btn_text_size">12dp</dimen> <!-- 30PX - HEIGHT -->
     <dimen name="news_details_padding">13dp</dimen> <!-- 33PX - HEIGHT -->
@@ -120,6 +120,7 @@
     <dimen name="eservice_item_padding">11dp</dimen> <!-- 28PX - HEIGHT -->
     <dimen name="eservice_item_text_size">10dp</dimen> <!-- 26PX - HEIGHT -->
     <dimen name="eservice_item_title_text_size">11dp</dimen> <!-- 28PX - HEIGHT -->
+    <dimen name="eservice_filter_screen_recycler_height">70dp</dimen>
 
 
     <dimen name="about_us_h1_text_size">13dp</dimen> <!-- 33PX - HEIGHT -->
