--- a/SECB/app/src/main/res/values-large/dimens.xml
+++ b/SECB/app/src/main/res/values-large/dimens.xml
@@ -62,7 +62,7 @@
     <dimen name="news_filter_screen_height">483dp</dimen> <!-- 905PX - HEIGHT -->
     <dimen name="news_filter_screen_recycler_height">144dp</dimen> <!-- 270PX - HEIGHT -->
 
-    <dimen name="news_filter_padding">18dp</dimen> <!-- 30PX - WIDTH -->
+    <dimen name="news_filter_padding">14dp</dimen> <!-- 30PX - WIDTH -->
     <dimen name="news_filter_text_size">13dp</dimen> <!-- 24PX - HEIGHT -->
     <dimen name="news_filter_btn_text_size">16dp</dimen> <!-- 30PX - HEIGHT -->
     <dimen name="news_details_padding">18dp</dimen> <!-- 33PX - HEIGHT -->
@@ -118,6 +118,7 @@
     <dimen name="eservice_item_padding">15dp</dimen> <!-- 28PX - HEIGHT -->
     <dimen name="eservice_item_text_size">14dp</dimen> <!-- 26PX - HEIGHT -->
     <dimen name="eservice_item_title_text_size">15dp</dimen> <!-- 28PX - HEIGHT -->
+    <dimen name="eservice_filter_screen_recycler_height">100dp</dimen>
 
 
     <dimen name="about_us_h1_text_size">18dp</dimen> <!-- 33PX - HEIGHT -->
