--- a/SECB/app/src/main/res/values-xhdpi/dimens.xml
+++ b/SECB/app/src/main/res/values-xhdpi/dimens.xml
@@ -60,7 +60,7 @@
     <dimen name="news_filter_screen_height">453dp</dimen> <!-- 905PX - HEIGHT -->
     <dimen name="news_filter_screen_recycler_height">135dp</dimen> <!-- 270PX - HEIGHT -->
 
-    <dimen name="news_filter_padding">15dp</dimen> <!-- 30PX - WIDTH -->
+    <dimen name="news_filter_padding">11dp</dimen> <!-- 30PX - WIDTH -->
     <dimen name="news_filter_text_size">12dp</dimen> <!-- 24PX - HEIGHT -->
     <dimen name="news_filter_btn_text_size">15dp</dimen> <!-- 30PX - HEIGHT -->
     <dimen name="news_details_padding">17dp</dimen> <!-- 33PX - HEIGHT -->
@@ -120,6 +120,7 @@
     <dimen name="eservice_item_padding">14dp</dimen> <!-- 28PX - HEIGHT -->
     <dimen name="eservice_item_text_size">13dp</dimen> <!-- 26PX - HEIGHT -->
     <dimen name="eservice_item_title_text_size">14dp</dimen> <!-- 28PX - HEIGHT -->
+    <dimen name="eservice_filter_screen_recycler_height">90dp</dimen>
 
     <dimen name="about_us_h1_text_size">17dp</dimen> <!-- 33PX - HEIGHT -->
     <dimen name="about_us_h2_text_size">13dp</dimen> <!-- 26PX - HEIGHT -->
