--- a/SECB/app/src/main/res/values-mdpi/dimens.xml
+++ b/SECB/app/src/main/res/values-mdpi/dimens.xml
@@ -134,5 +134,8 @@
     <dimen name="card_insets">2dp</dimen> <!-- 6PX - HEIGHT -->
 
 
+    <dimen name="organizer_item_card_height">55dp</dimen> <!-- 155PX - HEIGHT -->
+    <dimen name="time_filter_title_width">35dp</dimen> <!-- 80PX - WIDTH -->
+
 
 </resources>
