--- a/SECB/app/src/main/res/values-large/dimens.xml
+++ b/SECB/app/src/main/res/values-large/dimens.xml
@@ -132,4 +132,6 @@
     <dimen name="card_insets">3dp</dimen> <!-- 6PX - HEIGHT -->
 
 
+    <dimen name="organizer_item_card_height">83dp</dimen> <!-- 155PX - HEIGHT -->
+    <dimen name="time_filter_title_width">48dp</dimen> <!-- 80PX - WIDTH -->
 </resources>
