--- a/SECB/app/src/main/res/layout/contact_us.xml
+++ b/SECB/app/src/main/res/layout/contact_us.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    android:orientation="vertical"
-    android:padding="@dimen/contact_us_base_margin">
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:orientation="vertical"
+            android:padding="@dimen/contact_us_base_margin">
 
 
     <LinearLayout
@@ -22,27 +22,27 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableLeft="@drawable/event_card_place_icon"
-            android:textSize="@dimen/contact_us_text_us"
             android:drawablePadding="@dimen/contact_us_text_drwable_padding"
+            android:text="@string/secb_location_address"
             android:textColor="@color/secb_dark_text"
-            android:text="@string/secb_location_address"/>
+            android:textSize="@dimen/contact_us_text_us"/>
 
         <TextView
             android:id="@+id/txtv_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/email_icon"
-            android:textSize="@dimen/contact_us_text_us"
             android:layout_marginTop="@dimen/contact_us_text_drwable_padding"
+            android:drawableLeft="@drawable/email_icon"
             android:drawablePadding="@dimen/contact_us_text_drwable_padding"
+            android:text="@string/secb_email_address"
             android:textColor="@color/secb_dark_text"
-            android:text="@string/secb_email_address"/>
+            android:textSize="@dimen/contact_us_text_us"/>
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/contact_us_text_drwable_padding"
             android:layout_marginBottom="@dimen/contact_us_text_drwable_padding"
+            android:layout_marginTop="@dimen/contact_us_text_drwable_padding"
             android:gravity="center_vertical">
 
 
@@ -50,31 +50,31 @@
                 android:id="@+id/txtv_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:drawableLeft="@drawable/contactus_icon_3"
-                android:textSize="@dimen/contact_us_text_us"
                 android:drawablePadding="@dimen/contact_us_text_drwable_padding"
-                android:textColor="@color/secb_dark_text"
                 android:text="@string/secb_phone_number"
-                android:layout_weight="1"/>
+                android:textColor="@color/secb_dark_text"
+                android:textSize="@dimen/contact_us_text_us"/>
 
             <TextView
                 android:id="@+id/txtv_fax"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/fax_icon"
-                android:textSize="@dimen/contact_us_text_us"
                 android:layout_weight="1"
+                android:drawableLeft="@drawable/fax_icon"
                 android:drawablePadding="@dimen/contact_us_text_drwable_padding"
+                android:text="@string/secb_fax_number"
                 android:textColor="@color/secb_dark_text"
-                android:text="@string/secb_fax_number"/>
+                android:textSize="@dimen/contact_us_text_us"/>
 
         </TableRow>
 
         <TableRow
-            android:weightSum="8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/contact_us_text_drwable_padding"
+            android:weightSum="8"
             >
 
 
@@ -82,30 +82,33 @@
                 android:id="@+id/imgv_facebook"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/fb_icon"
+                android:layout_weight="1"
 
-                android:layout_weight="1"/>
+                android:src="@drawable/fb_icon"/>
+
             <ImageView
                 android:id="@+id/imgv_twitter"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/tw"
+                android:layout_weight="1"
 
-                android:layout_weight="1"/>
+                android:src="@drawable/tw"/>
+
             <ImageView
                 android:id="@+id/imgv_google"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/gp"
+                android:layout_weight="1"
 
-                android:layout_weight="1"/>
+                android:src="@drawable/gp"/>
+
             <ImageView
                 android:id="@+id/imgv_linkedin"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/in_icon"
+                android:layout_weight="1"
 
-                android:layout_weight="1"/>
+                android:src="@drawable/in_icon"/>
 
 
         </TableRow>
@@ -114,8 +117,8 @@
             android:id="@+id/map_container"
             android:layout_width="match_parent"
             android:layout_height="@dimen/event_details_map_height"
-            android:orientation="vertical"
-            android:layout_margin="@dimen/contact_us_base_margin" >
+            android:layout_margin="@dimen/contact_us_base_margin"
+            android:orientation="vertical">
 
 
             <FrameLayout
@@ -136,20 +139,20 @@
             android:layout_marginBottom="@dimen/event_details_iconed_info_margin"
             android:layout_marginLeft="@dimen/event_details_iconed_info_margin"
             android:layout_marginRight="@dimen/event_details_iconed_info_margin"
-            android:text="@string/contact_us_form_title"
             android:layout_marginTop="@dimen/contact_us_text_drwable_padding"
-            android:textColor="@color/secb_dark_text"
             android:padding="@dimen/contact_us_base_margin"
+            android:text="@string/contact_us_form_title"
+            android:textColor="@color/secb_dark_text"
             android:textSize="@dimen/contact_us_text_us"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@color/white"
             android:layout_marginBottom="@dimen/contact_us_padding"
             android:layout_marginLeft="@dimen/contact_us_padding"
             android:layout_marginRight="@dimen/contact_us_padding"
+            android:background="@color/white"
+            android:orientation="vertical"
             android:padding="@dimen/contact_us_padding">
 
             <!---->
@@ -157,106 +160,123 @@
                 android:id="@+id/edtxt_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/user_shape_icon"
-                android:textSize="@dimen/contact_us_text_us"
-                android:hint="@string/hint_name"
-                android:cursorVisible="true"
-                android:textCursorDrawable="@null"
-                android:background="@null"
-                android:drawablePadding="@dimen/contact_us_text_drwable_padding"
-                android:textColor="@color/secb_dark_text"
                 android:layout_weight="1"
+                android:background="@null"
+                android:cursorVisible="true"
+                android:drawableLeft="@drawable/user_shape_icon"
+                android:drawablePadding="@dimen/contact_us_text_drwable_padding"
+                android:hint="@string/hint_name"
+                android:paddingLeft="@dimen/contact_us_text_drwable_padding"
+                android:textColor="@color/secb_dark_text"
+                android:textCursorDrawable="@null"
+                android:textSize="@dimen/contact_us_text_us"
                 />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
-                android:background="#000"
-                android:layout_margin="@dimen/contact_us_text_drwable_padding"/>
+                android:layout_margin="@dimen/contact_us_text_drwable_padding"
+                android:background="#000"/>
+
             <EditText
                 android:id="@+id/edtxt_mobile"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/mobile_icon"
-                android:textSize="@dimen/contact_us_text_us"
-                android:hint="@string/hint_mobile"
-                android:cursorVisible="true"
-                android:textCursorDrawable="@null"
+                android:layout_weight="1"
                 android:background="@null"
-                android:textColor="@color/secb_dark_text"
+                android:cursorVisible="true"
+
+                android:drawableLeft="@drawable/mobile_icon"
                 android:drawablePadding="@dimen/contact_us_text_drwable_padding"
-                android:layout_weight="1"/>
+                android:hint="@string/hint_mobile"
+                android:paddingLeft="@dimen/contact_us_text_drwable_padding"
+                android:textColor="@color/secb_dark_text"
+                android:textCursorDrawable="@null"
+                android:textSize="@dimen/contact_us_text_us"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
-                android:background="#000"
-                android:layout_margin="@dimen/contact_us_text_drwable_padding"/>
+                android:layout_margin="@dimen/contact_us_text_drwable_padding"
+                android:background="#000"/>
+
             <EditText
                 android:id="@+id/edtxt_organization"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/organization_icon"
-                android:textSize="@dimen/contact_us_text_us"
-                android:cursorVisible="true"
-                android:textCursorDrawable="@null"
+                android:layout_weight="1"
                 android:background="@null"
-                android:hint="@string/hint_organization"
-                android:textColor="@color/secb_dark_text"
+                android:cursorVisible="true"
+                android:drawableLeft="@drawable/organization_icon"
                 android:drawablePadding="@dimen/contact_us_text_drwable_padding"
-                android:layout_weight="1"/>
+                android:hint="@string/hint_organization"
+                android:paddingLeft="@dimen/contact_us_text_drwable_padding"
+                android:textColor="@color/secb_dark_text"
+                android:textCursorDrawable="@null"
+                android:textSize="@dimen/contact_us_text_us"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
-                android:background="#000"
-                android:layout_margin="@dimen/contact_us_text_drwable_padding"/>
+                android:layout_margin="@dimen/contact_us_text_drwable_padding"
+                android:background="#000"/>
+
             <EditText
                 android:id="@+id/edtxt_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/email_icon"
-                android:textSize="@dimen/contact_us_text_us"
-                android:hint="@string/email_address"
-                android:cursorVisible="true"
-                android:textCursorDrawable="@null"
+                android:layout_weight="1"
                 android:background="@null"
-                android:textColor="@color/secb_dark_text"
+                android:cursorVisible="true"
+                android:drawableLeft="@drawable/email_icon"
                 android:drawablePadding="@dimen/contact_us_text_drwable_padding"
-                android:layout_weight="1"/>
+                android:hint="@string/email_address"
+                android:paddingLeft="@dimen/contact_us_text_drwable_padding"
+                android:textColor="@color/secb_dark_text"
+                android:textCursorDrawable="@null"
+                android:textSize="@dimen/contact_us_text_us"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
-                android:background="#000"
-                android:layout_margin="@dimen/contact_us_text_drwable_padding"/>
+                android:layout_margin="@dimen/contact_us_text_drwable_padding"
+                android:background="#000"/>
+
             <EditText
                 android:id="@+id/edtxt_job"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/job_icon"
-                android:textSize="@dimen/contact_us_text_us"
-                android:cursorVisible="true"
-                android:textCursorDrawable="@null"
+                android:layout_weight="1"
                 android:background="@null"
+                android:cursorVisible="true"
+                android:paddingLeft="@dimen/contact_us_text_drwable_padding"
+                android:drawableLeft="@drawable/job_icon"
+                android:drawablePadding="@dimen/contact_us_text_drwable_padding"
                 android:hint="@string/hint_job_title"
                 android:textColor="@color/secb_dark_text"
-                android:drawablePadding="@dimen/contact_us_text_drwable_padding"
-                android:layout_weight="1"/>
+                android:textCursorDrawable="@null"
+                android:textSize="@dimen/contact_us_text_us"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
-                android:background="#000"
-                android:layout_margin="@dimen/contact_us_text_drwable_padding"/>
+                android:layout_margin="@dimen/contact_us_text_drwable_padding"
+                android:background="#000"/>
+
             <EditText
                 android:id="@+id/edtxt_subject"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/subject_icon"
-                android:textSize="@dimen/contact_us_text_us"
+                android:layout_weight="1"
                 android:background="@null"
                 android:cursorVisible="true"
-                android:textCursorDrawable="@null"
-                android:hint="@string/hint_subject"
-                android:textColor="@color/secb_dark_text"
+                android:drawableLeft="@drawable/subject_icon"
                 android:drawablePadding="@dimen/contact_us_text_drwable_padding"
-                android:layout_weight="1"/>
+                android:hint="@string/hint_subject"
+                android:paddingLeft="@dimen/contact_us_text_drwable_padding"
+                android:textColor="@color/secb_dark_text"
+                android:textCursorDrawable="@null"
+                android:textSize="@dimen/contact_us_text_us"/>
 
 
         </LinearLayout>
@@ -265,13 +285,13 @@
             android:id="@+id/btn_send"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/contact_us_btn_text_us"
+            android:layout_margin="@dimen/contact_us_padding"
+            android:layout_weight="1"
+            android:background="@color/secb_orange"
             android:text="@string/send"
             android:textAllCaps="false"
             android:textColor="@color/secb_dark_text"
-            android:background="@color/secb_orange"
-            android:layout_margin="@dimen/contact_us_padding"
-            android:layout_weight="1"/>
+            android:textSize="@dimen/contact_us_btn_text_us"/>
 
     </LinearLayout>
 </ScrollView>
