--- a/SECB/app/src/main/res/layout/e_service_item_card.xml
+++ b/SECB/app/src/main/res/layout/e_service_item_card.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/eservice_item_padding"
-    android:background="@drawable/eservives_item_bg"
-    android:orientation="horizontal">
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_marginBottom="@dimen/eservice_item_padding"
+              android:background="@drawable/eservives_item_bg"
+              android:gravity="center_vertical"
+              android:orientation="horizontal">
     <!--colored line-->
     <LinearLayout
         android:id="@+id/layout_eservice_colored_line"
@@ -39,7 +40,7 @@
                 android:drawablePadding="@dimen/contact_us_text_drwable_padding"
                 android:text="@string/number"
                 android:textColor="@color/secb_dark_text"
-                android:textSize="@dimen/eservice_item_title_text_size" />
+                android:textSize="@dimen/eservice_item_title_text_size"/>
 
             <TextView
                 android:id="@+id/txtv_number_value"
@@ -48,7 +49,7 @@
                 android:layout_weight="2"
                 android:text="aaaaaaa"
                 android:textColor="@color/secb_grey_text"
-                android:textSize="@dimen/eservice_item_title_text_size" />
+                android:textSize="@dimen/eservice_item_title_text_size"/>
 
         </TableRow>
 
@@ -76,7 +77,7 @@
                     android:drawablePadding="@dimen/contact_us_text_drwable_padding"
                     android:text="@string/date"
                     android:textColor="@color/secb_dark_text"
-                    android:textSize="@dimen/eservice_item_title_text_size" />
+                    android:textSize="@dimen/eservice_item_title_text_size"/>
 
                 <TextView
                     android:id="@+id/txtv_date_value"
@@ -85,7 +86,7 @@
                     android:layout_weight="2"
                     android:text="aaaaaaa"
                     android:textColor="@color/secb_grey_text"
-                    android:textSize="@dimen/eservice_item_title_text_size" />
+                    android:textSize="@dimen/eservice_item_title_text_size"/>
 
             </TableRow>
 
@@ -104,7 +105,7 @@
                     android:drawablePadding="@dimen/contact_us_text_drwable_padding"
                     android:text="@string/status"
                     android:textColor="@color/secb_dark_text"
-                    android:textSize="@dimen/contact_us_text_us" />
+                    android:textSize="@dimen/contact_us_text_us"/>
 
                 <TextView
                     android:id="@+id/txtv_status_value"
@@ -113,7 +114,7 @@
                     android:layout_weight="2"
                     android:text="aaaaaaaaaaa"
                     android:textColor="@color/secb_grey_text"
-                    android:textSize="@dimen/contact_us_text_us" />
+                    android:textSize="@dimen/contact_us_text_us"/>
 
             </TableRow>
 
@@ -129,7 +130,8 @@
             android:gravity="left"
             android:text="Nine Firms Warned for Committing Violations."
             android:textColor="@color/secb_dark_text"
-            android:textSize="@dimen/eservice_item_title_text_size" />
+            android:textSize="@dimen/eservice_item_title_text_size"/>
+
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -144,7 +146,7 @@
                 android:drawablePadding="@dimen/contact_us_text_drwable_padding"
                 android:text="@string/type"
                 android:textColor="@color/secb_dark_text"
-                android:textSize="@dimen/eservice_item_title_text_size" />
+                android:textSize="@dimen/eservice_item_title_text_size"/>
 
             <TextView
                 android:id="@+id/txtv_type_value"
@@ -153,7 +155,7 @@
                 android:layout_weight="2"
                 android:text="aaaaaaa"
                 android:textColor="@color/secb_grey_text"
-                android:textSize="@dimen/eservice_item_title_text_size" />
+                android:textSize="@dimen/eservice_item_title_text_size"/>
 
         </TableRow>
 
