--- a/SECB/app/src/main/res/values-hdpi/dimens.xml
+++ b/SECB/app/src/main/res/values-hdpi/dimens.xml
@@ -97,9 +97,9 @@
     <dimen name="organizer_p_info_icon_margin">10dp</dimen> <!-- 25PX - HEIGHT -->
     <dimen name="organizer_p_info_h1_text_size">11dp</dimen> <!-- 27PX - HEIGHT -->
     <dimen name="organizer_p_info_h2_text_size">10dp</dimen> <!-- 24PX - HEIGHT -->
-    <dimen name="organizer_p_info_rows_margin">12dp</dimen> <!-- 30PX - HEIGHT -->
+    <!--<dimen name="organizer_p_info_rows_margin">12dp</dimen> &lt;!&ndash; 30PX - HEIGHT &ndash;&gt;-->
     <dimen name="organizer_details_margin">14dp</dimen> <!-- 35PX - HEIGHT -->
-    <dimen name="organizer_details_margin_small">8dp</dimen> <!-- 20PX - HEIGHT -->
+    <!--<dimen name="organizer_details_margin_small">8dp</dimen> &lt;!&ndash; 20PX - HEIGHT &ndash;&gt;-->
     <dimen name="organizer_card_img_size">55dp</dimen> <!-- 138PX - HEIGHT -->
 
     <dimen name="item_card_height">84dp</dimen> <!-- 210PX - HEIGHT -->
@@ -117,7 +117,9 @@
 
     <dimen name="eservice_colored_line_width">4dp</dimen> <!-- 10PX - WIDTH -->
 
-    <dimen name="eservice_item_padding">11dp</dimen> <!-- 28PX - HEIGHT -->
+    <!--<dimen name="eservice_item_padding">11dp</dimen> &lt;!&ndash; 28PX - HEIGHT &ndash;&gt;-->
+
+    <dimen name="eservice_item_padding">6dp</dimen> <!-- 15PX - HEIGHT -->
     <dimen name="eservice_item_text_size">10dp</dimen> <!-- 26PX - HEIGHT -->
     <dimen name="eservice_item_title_text_size">11dp</dimen> <!-- 28PX - HEIGHT -->
     <dimen name="eservice_filter_screen_recycler_height">70dp</dimen>
@@ -137,8 +139,10 @@
 
     <dimen name="organizer_item_card_height">62dp</dimen> <!-- 155PX - HEIGHT -->
     <dimen name="time_filter_title_width">36dp</dimen> <!-- 80PX - WIDTH -->
+    <dimen name="about_us_text_margin">5dp</dimen> <!-- 13PX - HEIGHT -->
 
-
+    <dimen name="organizer_p_info_rows_margin">8dp</dimen> <!-- 15PX - HEIGHT -->
+    <dimen name="organizer_details_margin_small">5dp</dimen> <!-- 10PX - HEIGHT -->
 
 
 </resources>
