--- a/SECB/app/src/main/res/values-large/dimens.xml
+++ b/SECB/app/src/main/res/values-large/dimens.xml
@@ -96,9 +96,9 @@
     <dimen name="organizer_p_info_icon_margin">14dp</dimen> <!-- 25PX - HEIGHT -->
     <dimen name="organizer_p_info_h1_text_size">14dp</dimen> <!-- 27PX - HEIGHT -->
     <dimen name="organizer_p_info_h2_text_size">13dp</dimen> <!-- 24PX - HEIGHT -->
-    <dimen name="organizer_p_info_rows_margin">16dp</dimen> <!-- 30PX - HEIGHT -->
+    <!--<dimen name="organizer_p_info_rows_margin">16dp</dimen> &lt;!&ndash; 30PX - HEIGHT &ndash;&gt;-->
     <dimen name="organizer_details_margin">19dp</dimen> <!-- 35PX - HEIGHT -->
-    <dimen name="organizer_details_margin_small">11dp</dimen> <!-- 20PX - HEIGHT -->
+    <!--<dimen name="organizer_details_margin_small">11dp</dimen> &lt;!&ndash; 20PX - HEIGHT &ndash;&gt;-->
     <dimen name="organizer_card_img_size">74dp</dimen> <!-- 138PX - HEIGHT -->
 
     <dimen name="item_card_height">112dp</dimen> <!-- 210PX - HEIGHT -->
@@ -115,7 +115,9 @@
     <dimen name="contact_us_text_drwable_padding">11dp</dimen> <!-- 20PX - HEIGHT -->
 
     <dimen name="eservice_colored_line_width">6dp</dimen> <!-- 10PX - WIDTH -->
-    <dimen name="eservice_item_padding">15dp</dimen> <!-- 28PX - HEIGHT -->
+    <!--<dimen name="eservice_item_padding">15dp</dimen> &lt;!&ndash; 28PX - HEIGHT &ndash;&gt;-->
+
+    <dimen name="eservice_item_padding">8dp</dimen> <!-- 15PX - HEIGHT -->
     <dimen name="eservice_item_text_size">14dp</dimen> <!-- 26PX - HEIGHT -->
     <dimen name="eservice_item_title_text_size">15dp</dimen> <!-- 28PX - HEIGHT -->
     <dimen name="eservice_filter_screen_recycler_height">100dp</dimen>
@@ -134,4 +136,8 @@
 
     <dimen name="organizer_item_card_height">83dp</dimen> <!-- 155PX - HEIGHT -->
     <dimen name="time_filter_title_width">48dp</dimen> <!-- 80PX - WIDTH -->
+    <dimen name="about_us_text_margin">7dp</dimen> <!-- 13PX - HEIGHT -->
+
+    <dimen name="organizer_p_info_rows_margin">8dp</dimen> <!-- 15PX - HEIGHT -->
+    <dimen name="organizer_details_margin_small">6dp</dimen> <!-- 10PX - HEIGHT -->
 </resources>
