--- a/SECB/app/src/main/res/values-xhdpi/dimens.xml
+++ b/SECB/app/src/main/res/values-xhdpi/dimens.xml
@@ -97,9 +97,9 @@
     <dimen name="organizer_p_info_icon_margin">13dp</dimen> <!-- 25PX - HEIGHT -->
     <dimen name="organizer_p_info_h1_text_size">14dp</dimen> <!-- 27PX - HEIGHT -->
     <dimen name="organizer_p_info_h2_text_size">12dp</dimen> <!-- 24PX - HEIGHT -->
-    <dimen name="organizer_p_info_rows_margin">15dp</dimen> <!-- 30PX - HEIGHT -->
+    <!--<dimen name="organizer_p_info_rows_margin">15dp</dimen> &lt;!&ndash; 30PX - HEIGHT &ndash;&gt;-->
     <dimen name="organizer_details_margin">18dp</dimen> <!-- 35PX - HEIGHT -->
-    <dimen name="organizer_details_margin_small">10dp</dimen> <!-- 20PX - HEIGHT -->
+    <!--<dimen name="organizer_details_margin_small">10dp</dimen>  20PX - HEIGHT -->
     <dimen name="item_card_height">105dp</dimen> <!-- 210PX - HEIGHT -->
     <dimen name="organizer_card_img_size">69dp</dimen> <!-- 138PX - HEIGHT -->
 
@@ -117,7 +117,9 @@
 
     <dimen name="eservice_colored_line_width">5dp</dimen> <!-- 10PX - WIDTH -->
 
-    <dimen name="eservice_item_padding">14dp</dimen> <!-- 28PX - HEIGHT -->
+    <!--<dimen name="eservice_item_padding">14dp</dimen> &lt;!&ndash; 28PX - HEIGHT &ndash;&gt;-->
+
+    <dimen name="eservice_item_padding">8dp</dimen> <!-- 15PX - HEIGHT -->
     <dimen name="eservice_item_text_size">13dp</dimen> <!-- 26PX - HEIGHT -->
     <dimen name="eservice_item_title_text_size">14dp</dimen> <!-- 28PX - HEIGHT -->
     <dimen name="eservice_filter_screen_recycler_height">90dp</dimen>
@@ -135,5 +137,8 @@
     <dimen name="organizer_item_card_height">78dp</dimen> <!-- 155PX - HEIGHT -->
     <dimen name="time_filter_title_width">40dp</dimen> <!-- 80PX - WIDTH -->
 
+    <dimen name="about_us_text_margin">7dp</dimen> <!-- 13PX - HEIGHT -->
+    <dimen name="organizer_p_info_rows_margin">8dp</dimen> <!-- 15PX - HEIGHT -->
+    <dimen name="organizer_details_margin_small">5dp</dimen> <!-- 10PX - HEIGHT -->
 
 </resources>
