--- a/SECB/app/src/main/res/layout-sw600dp/_home_fragment.xml
+++ b/SECB/app/src/main/res/layout-sw600dp/_home_fragment.xml
@@ -65,7 +65,7 @@
 
     <!--last news card-->
     <LinearLayout
-        android:layout_width="0pd"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical"
